src/components/ExpandableCard.css
.expandable-card {
  background: #FFFFFF;
  overflow: hidden;
  border-left: 1px solid rgba(0, 0, 0, 0.10);
  border-right: 1px solid rgba(0, 0, 0, 0.10);
  border-bottom: 1px solid rgba(0, 0, 0, 0.10);
  margin: 10px;
}

.expandable-card, .expandable-card.default {
  border-top: 4px solid #035aa6;
}

.expandable-card.primary {
  border-top: 4px solid #120136;
}

.expandable-card.secondary {
  border-top: 4px solid #40bad5;
}

.expandable-card.warning {
  border-top: 4px solid #fcbf1e;
}

.expandable-card .header {
  padding: 10px;
}

.expandable-card .body {
  padding: 10px;
}

.expandable-card .header {
  display: flex;
  flex-direction: row;
  align-items: center;
  background: #FFFFFF;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
}

.expandable-card .header .title {
  font-weight: 700;
  text-align: left;
  flex: 1;
  color: #120136;
}

.expandable-card .header .expand {
  text-align: right;
}

.expandable-card .header .expand.rotate-90 {
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    -webkit-transition: transform 500ms ease;
    -moz-transition: transform 500ms ease;
    -ms-transition: transform 500ms ease;
    -o-transition: transform 500ms ease;
    transition: transform 500ms ease;
}

.expandable-card .header .expand.rotate-0 {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: transform 500ms ease;
    -moz-transition: transform 500ms ease;
    -ms-transition: transform 500ms ease;
    -o-transition: transform 500ms ease;
    transition: transform 500ms ease;
}

.expandable-card .body.fade-enter {
  max-height: 0;
  opacity: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.expandable-card .body.fade-enter-active {
  max-height: 500px;
  opacity: 1;
  transition: all 500ms;
}

.expandable-card .body.fade-exit {
  max-height: 500px;
  opacity: 1;
}

.expandable-card .body.fade-exit-active {
  max-height: 0;
  opacity: 0;
  padding-top: 0;
  padding-bottom: 0;
  transition: all 500ms;
}

